# LabProject

./: readme.md
2dMotionCapture/: README.md
2dMotionCapture/src/algorithm_test/: CMakeLists.txt  package.xml
2dMotionCapture/src/algorithm_test/include/algorithm_test/: analogCamera.h
2dMotionCapture/src/algorithm_test/src/: analogCamera.cpp  main.cpp
2dMotionCapture/src/camera_drive/: CMakeLists.txt  package.xml
2dMotionCapture/src/camera_drive/include/cameraDrive/: cameraDrive.h
2dMotionCapture/src/camera_drive/launch/: openCamera.launch
2dMotionCapture/src/camera_drive/src/: cameraDrive.cpp  main.cpp
2dMotionCapture/src/image_process/: CMakeLists.txt  package.xml
2dMotionCapture/src/image_process/include/image_process/: imageProcess.h
2dMotionCapture/src/image_process/src/: imageProcess.cpp  main.cpp
MotionCaptureQT/: MotionCaption.pro  README.md  camera.cpp  camera.h  common.h  imgui.ini  mainwindow.cpp  mainwindow.h  mainwindow.ui  mindvisioncamrea.cpp  mindvisioncamrea.h  motionCapture.qrc  openglwidget.cpp  openglwidget.h  read_data.h
MotionCaptureQT/include/tool/: cameraClass.h  read_data.h
MotionCaptureQT/resource/shader/: shader_axis.vs  shader_camera.vs  shader_mesh.fs  shader_mesh.vs  shader_point.vs
YoloOnnx/: yolo-onnx操作.md
cameraQRTask/: BuildOpenCV.txt  CMakeLists.txt  README.md
cameraQRTask/include/: Camera.h
cameraQRTask/src/: Camera.cpp  main.cpp
highAccuracyPosition_Repository/: CMakeLists.txt  readme.md
highAccuracyPosition_Repository/data/: points2d_01.txt  points2d_02.txt  points3d.txt
highAccuracyPosition_Repository/data/Output/: calibrationRod3dPoints.txt  one_dim02_data.txt  simple3DPoints.txt
highAccuracyPosition_Repository/include/: Read2dAnd2d.h  Read3dPoints.h  homoRead2dAnd2d.h
highAccuracyPosition_Repository/src/cornerExtractionAlgorithm/: CMakeLists.txt  HarrisAndSubpixel.cpp  Readme.md  caliRodCorner_Harris.cpp
highAccuracyPosition_Repository/src/externalParameterCalculation/: CMakeLists.txt  OpenCVExternalPara.cpp  Readme.md  externalParmeter.cpp
highAccuracyPosition_Repository/src/externalParameterScaleRecover/: CMakeLists.txt  Readme.md  exterParamScaleRecover.cpp
highAccuracyPosition_Repository/src/foundmentalMatrixCalculate/OpenCVFundamental/: CMakeLists.txt  Read2dAnd2d.cpp  opencvCalFundental.cpp
highAccuracyPosition_Repository/src/foundmentalMatrixCalculate/fundamentalCalculate/: CMakeLists.txt  normlizationEightPoint.cpp  normlizationMutiPoint.cpp
highAccuracyPosition_Repository/src/simulationDataGeneration/3Dto2d/: 3dTo2d.cpp  CMakeLists.txt  Read3dPoints.cpp  Readme.md
highAccuracyPosition_Repository/src/simulationDataGeneration/generate3DPoint/: CMakeLists.txt  Readme.md  calibrationRod3d.cpp  simple3D.cpp
highAccuracyPosition_Repository/src/trangulationCalculation/: CMakeLists.txt  Readme.md  homoRead2dAnd2d.cpp  trangulation.cpp
